# Embedded-Intent-Recognizer

./: CMakeLists.txt  Intent_Recognition.cpp  Intent_Recognition.h  main.cpp
UnitTests/: CMakeLists.txt  UnitTests.cpp
